--- a/index.html
+++ b/index.html
@@ -40,37 +40,37 @@
                     <li class="section01-ul-li">
                       <div class="info">
                         <img src="images/banner_heading_01.png" alt="" />
-                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
-                      <div class="img">
-                        <img src="images/IMG_facilities_8.jpg" alt="" />
+                      <div class="li_img">
+                        <img src="images/IMG_facilities_8.png" alt="" />
+                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
                     <li class="section01-ul-li">
                       <div class="info">
                         <img src="images/banner_heading_02.png" alt="" />
-                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
-                      <div class="img">
+                      <div class="li_img">
                         <img src="images/IMG_facilities_5.jpg" alt="" />
+                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
                     <li class="section01-ul-li">
                       <div class="info">
                         <img src="images/banner_heading_03.png" alt="" />
-                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
-                      <div class="img">
+                      <div class="li_img">
                         <img src="images/IMG_facilities_5.jpg" alt="" />
+                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
                     <li class="section01-ul-li">
                       <div class="info">
                         <img src="images/banner_heading_04.png" alt="" />
-                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
-                      <div class="img">
+                      <div class="li_img">
                         <img src="images/IMG_facilities_5.jpg" alt="" />
+                        <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
                   </ul>
