--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <img src="images/banner_heading_01.png" alt="" />
                       </div>
                       <div class="li_img">
-                        <img src="images/IMG_facilities_8.png" alt="" />
+                        <img src="images/banner_headingPhoto_01.png" alt="" />
                         <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
@@ -51,7 +51,7 @@
                         <img src="images/banner_heading_02.png" alt="" />
                       </div>
                       <div class="li_img">
-                        <img src="images/IMG_facilities_5.jpg" alt="" />
+                        <img src="images/banner_headingPhoto_02.png" alt="" />
                         <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
@@ -60,7 +60,7 @@
                         <img src="images/banner_heading_03.png" alt="" />
                       </div>
                       <div class="li_img">
-                        <img src="images/IMG_facilities_5.jpg" alt="" />
+                        <img src="images/banner_headingPhoto_03.png" alt="" />
                         <a href="#" class="btn akiruno">詳細をみる</a>
                       </div>
                     </li>
@@ -109,8 +109,12 @@
               <section class="section04">
                 <div class="container">
                   <div class="blog">
-                    <img src="images/banner_blog_01.png" alt="">
+                    <img src="images/banner_blog2.png" alt="">
                   </div>
+                  <div class="recruit">
+                    <img src="images/banner_blog2.png" alt="">
+                  </div>
+
                 </div>
               </section>
 
