--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>グループホームひまわり｜「その人らしさ」を大切に</title>
-    <meta name="description" content="グループホームひまわりは、北海道河東郡士幌町にある、認知症高齢者向けのグループホームです。認知症という生活障害をもたれているお年寄りが、家庭的な環境の中でその人らしい豊かな生活ができることを目指しています。" />
+    <meta
+      name="description"
+      content="グループホームひまわりは、北海道河東郡士幌町にある、認知症高齢者向けのグループホームです。認知症という生活障害をもたれているお年寄りが、家庭的な環境の中でその人らしい豊かな生活ができることを目指しています。"
+    />
     <link rel="icon" href="images/logo_large.png" />
     <link rel="stylesheet" href="styles/loader.css" />
     <script src="scripts/vendors/pace.js"></script>
@@ -27,7 +30,7 @@
               <section class="section01">
                 <div class="container">
                   <div class="section01-heading">
-                    <img src="images/logo_welcome.png" alt="" />
+                    <img src="images/banner_welcome_03.png" alt="" />
                     <h2 class="main-title tween-animate-title">
                       Welcome to Himawari
                     </h2>
@@ -80,28 +83,24 @@
               <section class="section03">
                 <div class="container">
                   <div class="section03-heading">
-                    <h2 class="main-title tween-animate-title">
-                    Services
-                    </h2>
+                    <h2 class="main-title tween-animate-title">Services</h2>
                   </div>
                   <ul class="section03-ul">
                     <li class="section03-ul-li">
                       <a href="#">
-                        <img src="images/banner_services_01.png" alt="">
+                        <img src="images/banner_services_01.png" alt="" />
                       </a>
                     </li>
                     <li class="section03-ul-li">
                       <a href="#">
-                        <img src="images/banner_services_02.png" alt="">
+                        <img src="images/banner_services_02.png" alt="" />
                       </a>
                     </li>
                     <li class="section03-ul-li">
                       <a href="#">
-                        <img src="images/banner_services_03.png" alt="">
+                        <img src="images/banner_services_03.png" alt="" />
                       </a>
                     </li>
-
-
                   </ul>
                 </div>
               </section>
@@ -109,18 +108,25 @@
               <section class="section04">
                 <div class="container">
                   <div class="blog">
-                    <img src="images/banner_blog2.png" alt="">
+                    <a href="#">
+                      <img src="images/banner_blog2.png" alt="" />
+                    </a>
                   </div>
                   <div class="recruit">
-                    <img src="images/banner_blog2.png" alt="">
+                    <a href="#">
+                      <img src="images/banner_recruit2.png" alt="" />
+                    </a>
+                  </div>
+                  <div class="line">
+                    <a href="#">
+                      <img src="images/banner_line.png" alt="" />
+                    </a>
                   </div>
 
                 </div>
               </section>
 
-
-
-              <section class="section02">
+              <!-- <section class="section02">
                   <div class="recruit">
                     <a href="#">
                     <img
@@ -131,9 +137,7 @@
                     </a>
                   </div>
                 </a>
-              </section>
-
-
+              </section> -->
             </main>
           </div>
         </div>
