--- a/index.html
+++ b/index.html
@@ -122,7 +122,6 @@
                       <img src="images/banner_line.png" alt="" />
                     </a>
                   </div>
-
                 </div>
               </section>
 
@@ -150,6 +149,33 @@
         <li class="item">list02</li>
       </ul>
     </div>
+
+    <footer class="footer">
+      <div class="footer_container">
+        <div class="logo">
+          <div class="logo__img">
+            <img src="images/logo_large.png" alt="" />
+          </div>
+          <div class="logo__text">
+            <p class="logo__desc">
+              士幌の認知症高齢者向けの<br />グループホームなら
+            </p>
+            <p class="logo__name">ひまわり</p>
+          </div>
+        </div>
+        <nav class="footer__nav">
+          <ul class="footer__ul">
+            <li class="footer__li"><a href="#">入所</a></li>
+            <li class="footer__li"><a href="#">施設案内</a></li>
+            <li class="footer__li"><a href="#">生活について</a></li>
+            <li class="footer__li"><a href="#">法人概要</a></li>
+            <li class="footer__li"><a href="#">採用情報</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="footer__copyright">&copy;ひまわり</div>
+    </footer>
+
     <script src="scripts/libs/text-animation.js"></script>
 
     <script src="scripts/vendors/swiper.min.js"></script>
